<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 android:id="@+id/main_content"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="true">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_backdrop_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:expandedTitleMarginStart="48dp"
            app:expandedTitleMarginEnd="64dp">

            <ImageView
                android:id="@+id/backdrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:fitsSystemWindows="true"
                app:layout_collapseMode="parallax" />

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingTop="24dp">

            <!--Info  -->

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/card_margin">

                <LinearLayout
                    style="@style/Widget.CardContent"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Info"
                        android:textAppearance="@style/TextAppearance.AppCompat.Title" />

                    <TextView
                        android:id="@+id/movie_info"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                         />

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--Trailer -->

            <android.support.v7.widget.CardView
                android:id="@+id/detail_movie_trailers_card_view"
                style="@style/MovieDetailContainer">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MovieDetailContainerTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Trailers" />

                    <include layout="@layout/divider" />

                    <HorizontalScrollView
                        android:layout_width="match_parent"
                        android:padding="6dp"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/movie_detail_trailer_container"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:orientation="horizontal"
                            android:paddingBottom="10dp"
                            android:paddingTop="10dp">

                            <ProgressBar
                                style="?android:attr/progressBarStyleSmall"
                                android:id="@+id/movie_detail_trailer_progress_bar"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:visibility="gone" />

                            <TextView
                                android:id="@+id/empty_trailer_list"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/no_trailers"
                                android:paddingLeft="@dimen/text_padding_8dp"
                                android:visibility="gone"/>

                        </LinearLayout>
                    </HorizontalScrollView>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <!--Reviews -->

            <android.support.v7.widget.CardView
                android:id="@+id/detail_movie_reviews_card_view"
                style="@style/MovieDetailContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/detail_movie_reviews_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        style="@style/MovieDetailContainerTitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/reviews" />

                    <include layout="@layout/divider" />

                    <ProgressBar
                        style="?android:attr/progressBarStyleSmall"
                        android:id="@+id/movie_detail_review_progress_bar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/text_padding_16dp"
                        android:visibility="gone" />

                    <TextView
                        android:id="@+id/empty_review_list"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_reviews"
                        android:paddingLeft="@dimen/text_padding_8dp"
                        android:paddingTop="@dimen/text_padding_16dp"
                        android:paddingBottom="@dimen/text_padding_16dp"
                        android:visibility="gone"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/favorite_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:clickable="true"
        android:contentDescription="@string/movie_detail_add_favorite"
        android:src="@drawable/ic_favorite_outline"
        app:elevation="4dp"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|right|end" />

</android.support.design.widget.CoordinatorLayout>